--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -44,7 +44,8 @@
   justify-content: center;
   list-style: none;
   margin: 0;
-  padding-block: var(--size-1p5);
+  padding-top: calc(var(--size-1) - #{rem(1)});
+  padding-bottom: var(--size-1p5);
   padding-inline: var(--size-1);
   position: fixed;
   right: 0;
@@ -76,6 +77,8 @@
   }
 
   @media (--phone) {
+    --height-btn: auto;
+
     border: 0;
     border-radius: var(--border-radius-base);
     color: var(--color-ink-2ry);
@@ -86,18 +89,27 @@
     font-size: var(--font-size-caption);
     letter-spacing: var(--letter-spacing-caption);
     line-height: var(--line-height-caption);
-    padding-top: var(--size-1);
+    padding-block: var(--size-1);
     width: 100%;
-    height: var(--size-7);
   }
 }
 
-:where(.e-page.is-home) .e-header__menu-item.is-home {
-  background-color: var(--color-bg-success);
+:where(.e-page.is-home) .e-header__menu-item.is-home,
+:where(.e-page.is-pricing) .e-header__menu-item.is-pricing {
+  pointer-events: none;
 
-  .e-icon {
-    --color-fill-icon: var(--color-bg-base);
-    --color-stroke-icon: var(--color-ink-2ry-success);
+  @media (--phone) {
+    background-color: var(--color-bg-success);
+
+    .e-icon {
+      --color-fill-icon: var(--color-bg-base);
+      --color-stroke-icon: var(--color-ink-2ry-success);
+    }
+  }
+
+  @media (--tablet) {
+    border: 0;
+    color: var(--color-ink-text);
   }
 }
 // #endregion
